# signbot

./: .env.production.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  models.py  schemas.py  telegram_bot.py  validators.py
app/services/: crypto.py  file_store.py  jobs.py  signer.py  storage.py
app/static/: install.js  style.css
app/templates/: expired.html  index.html  install.html
deploy/: nginx.conf
scripts/: e2e_smoke.py
tests/: test_jobs.py  test_security.py
